--- a/style.css
+++ b/style.css
@@ -17,13 +17,12 @@ body {
 
 .container {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 80%;
     height: 100vh;
     background-color: aqua;
-    gap: 200px;
+    gap: 50px;
 }
 
 .square-box {
@@ -41,4 +40,21 @@ body {
 .squares {
 
     border: 2px solid red;
+}
+
+.input-box {
+    padding: 20px;
+    font-size: 20px;
+}
+
+label {
+    font-size: 30px;
+}
+
+.btn-clear {
+    font-size: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
 }
